--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,7 @@ categories = ["chatbot"]
 [dependencies]
 teloxide = { version = "0.12", features = ["macros"] }
 log = "0.4"
-pretty_env_logger = "0.4"
+pretty_env_logger = "0.5"
 tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
+futures = "0.3.28"
+url = "2.4.1"
