--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ categories = ["chatbot"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-teloxide = { version = "0.12", features = ["macros"] }
+teloxide = { version = "0.12", features = ["macros", "rustls"] }
 log = "0.4"
 pretty_env_logger = "0.5"
 tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
