--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ categories = ["chatbot"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-teloxide = { version = "0.12", features = ["macros", "rustls"] }
+teloxide = { version = "0.12", features = ["rustls"] }
 tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
 futures = "0.3.28"
 url = "2.4.1"
